--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ chardet==4.0.0
 clang==5.0
 click==8.0.1
 colorama==0.4.4
+dj-database-url==0.5.0
 Django==3.1.5
 et-xmlfile==1.1.0
 flatbuffers==1.12
@@ -19,6 +20,7 @@ google-auth==1.34.0
 google-auth-oauthlib==0.4.5
 google-pasta==0.2.0
 grpcio==1.39.0
+gunicorn==20.1.0
 h5py==3.1.0
 idna==2.10
 isort==5.6.4
@@ -31,6 +33,7 @@ markdown2==2.4.0
 maxminddb==2.2.0
 mccabe==0.6.1
 multidict==5.1.0
+numpy==1.21.2
 oauthlib==3.1.1
 opencv-python==4.5.3.56
 openpyxl==3.0.7
@@ -57,6 +60,8 @@ tqdm==4.62.1
 typing-extensions==3.7.4.3
 urllib3==1.26.4
 Werkzeug==2.0.1
+whitenoise==5.3.0
 wrapt==1.12.1
 yapf==0.31.0
-yarl==1.6.3
+yarl==1.6.3Djan
+psycopg2-binary==2.8.6
